# edit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml  release-windows-ms.toml  release.toml
.github/workflows/: build.yml  ci.yml  pr.yml  winget.yml
.pipelines/: release.yml  tsa.json
COMPILACION64BITS/: edit  leeme.txt
COMPILACION64BITS/ARM64/: edit  leeme.txt
assets/: com.microsoft.edit.desktop  microsoft.sixel
assets/editing-traces/: README.md  rustcode.json.zst
assets/manpage/: edit.1
benches/: lib.rs
src/: apperr.rs  arena.rs  base64.rs  buffer.rs  cell.rs  clipboard.rs  document.rs  framebuffer.rs  fuzzy.rs  gap_buffer.rs  hash.rs  helpers.rs  icu.rs  input.rs  lib.rs  loc.rs  main.rs  memchr.rs  oklab.rs  path.rs  sys.rs  trust_me_bro.rs  tui.rs  ucd.rs  ucd_gen.rs  utf8.rs  vt.rs
src/arena/: debug.rs  mod.rs  release.rs  scratch.rs  string.rs
src/buffer/: gap_buffer.rs  line_cache.rs  mod.rs  navigation.rs
src/simd/: lines_bwd.rs  lines_fwd.rs  memchr2.rs  memrchr2.rs  memset.rs  mod.rs
src/sys/: mod.rs  unix.rs  windows.rs
src/unicode/: measurement.rs  mod.rs  tables.rs  utf8.rs
tools/: build_release_windows.bat
tools/grapheme-table-gen/: Cargo.toml  README.md
tools/grapheme-table-gen/src/: main.rs  rules.rs
